home and update sign up and login

--- a/app/src/main/res/drawable/et_background_custom.xml
+++ b/app/src/main/res/drawable/et_background_custom.xml
@@ -5,4 +5,5 @@
    <padding
        android:right="8dp" android:left="8dp"/>
   <size android:height="48dp"></size>
+    <solid android:color="@color/white"></solid>
 </shape>
