--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -50,27 +50,38 @@
 
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/l_phone"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/mar_rig_lift"
+                    android:layout_marginEnd="@dimen/mar_rig_lift"
+                    app:boxCornerRadiusBottomEnd="18dp"
                     android:layout_marginTop="@dimen/margin_top"
-                    android:layout_marginLeft="@dimen/mar_rig_lift"
-                    android:layout_marginRight="@dimen/mar_rig_lift"
-                    android:background="@drawable/et_background_custom"
-                    android:hint="@string/phone"
+                    app:boxCornerRadiusBottomStart="18dp"
+                    app:boxCornerRadiusTopEnd="18dp"
+                    app:boxCornerRadiusTopStart="18dp"
+                    app:boxStrokeColor="@color/yellow"
+                    app:boxStrokeWidth="1dp"
                     android:textColorHint="@color/black"
-                    app:boxStrokeWidth="0dp"
-                    app:boxStrokeWidthFocused="0dp"
+                    android:textSize="18sp"
                     app:endIconMode="clear_text"
-                    app:hintTextColor="@color/yellow">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_phone"
                         android:layout_width="match_parent"
                         android:layout_height="52dp"
-                        android:background="@android:color/transparent"
-                        android:inputType="phone"
-                        android:textColor="@color/black"
-                        android:textSize="14sp" />
+                        android:hint="@string/phone"
+                        android:paddingHorizontal="8dp"
+                        android:paddingVertical="10dp"
+                        android:textSize="@dimen/text_size_small"
+                        android:textStyle="bold"
+                        android:inputType="number"
+                        />
+
 
                 </com.google.android.material.textfield.TextInputLayout>
 
