--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,12 +8,12 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/today_quiz"
         android:textSize="18sp"
         android:layout_marginStart="@dimen/mar_rig_lift"
         android:layout_marginEnd="@dimen/mar_rig_lift"
-        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginTop="24dp"
         android:textColor="@color/black"
         />
     <RelativeLayout
@@ -22,6 +22,33 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_quiz"
+            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginRight="@dimen/mar_rig_lift"
+            android:layout_marginLeft="@dimen/mar_rig_lift"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/review"
+        android:textSize="18sp"
+        android:layout_marginStart="@dimen/mar_rig_lift"
+        android:layout_marginEnd="@dimen/mar_rig_lift"
+        android:layout_marginTop="24dp"
+        android:textColor="@color/black"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_review"
+            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginRight="@dimen/mar_rig_lift"
+            android:layout_marginLeft="@dimen/mar_rig_lift"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
