--- a/app/src/main/res/layout/rv_review.xml
+++ b/app/src/main/res/layout/rv_review.xml
@@ -9,18 +9,29 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:elevation="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:padding="12dp"
         android:background="@drawable/background_quiz_custom"
+        android:elevation="10dp"
         android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:src="@drawable/review_logo"/>
 
         <TextView
-            android:id="@+id/txt_nameQuiz"
+            android:id="@+id/txt_nameReview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="20dp"
-            android:text="@string/quiz"
+            android:text="@string/review"
+            android:layout_toRightOf="@+id/logo"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold"
@@ -28,12 +39,13 @@
             />
 
         <ImageButton
-            android:id="@+id/btn_goQuiz"
+            android:id="@+id/btn_Download"
             android:layout_width="54dp"
             android:layout_height="60dp"
+            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/rectangle"
-            android:src="@drawable/baseline_arrow_forward_24" />
+            android:background="@drawable/rectangle2_"
+            android:src="@drawable/play_for_icon" />
     </RelativeLayout>
 
 </RelativeLayout>
