--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -39,6 +39,9 @@
 
             </RelativeLayout>
 
+
+
+
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -47,36 +50,37 @@
                     android:layout_marginTop="28dp"
                     >
 
-                    <TextView
-                        android:id="@+id/body"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/body1"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/cairo"
-                        android:textColor="@color/black"/>
 
-                    <TextView
-                        android:id="@+id/middel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/body2"
-                        android:layout_below="@+id/body"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/cairo"
-                        android:textColor="@color/black"/>
+                        <TextView
+                            android:id="@+id/body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/body1"
+                            android:layout_centerHorizontal="true"
+                            android:textSize="14sp"
+                            android:fontFamily="@font/cairo"
+                            android:textColor="@color/black"/>
 
-                    <TextView
-                        android:id="@+id/end"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/body3"
-                        android:layout_centerHorizontal="true"
-                        android:layout_below="@+id/middel"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/cairo"
-                        android:textColor="@color/black"/>
+                        <TextView
+                            android:id="@+id/middel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/body2"
+                            android:layout_below="@+id/body"
+                            android:textSize="14sp"
+                            android:fontFamily="@font/cairo"
+                            android:textColor="@color/black"/>
+
+                        <TextView
+                            android:id="@+id/end"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/body3"
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@+id/middel"
+                            android:textSize="14sp"
+                            android:fontFamily="@font/cairo"
+                            android:textColor="@color/black"/>
 
                 </RelativeLayout>
 
@@ -88,24 +92,33 @@
                 android:layout_marginLeft="71dp"
                 android:orientation="vertical"
                 >
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button_shape"
-                    android:text="@string/next"
-                    android:layout_marginBottom="8dp"
-                    />
-                <TextView
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/skip"
-                    android:layout_marginLeft="88dp"
-                    android:layout_marginBottom="32dp"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/cairo"
-                    android:textColor="@color/black"
-                    android:clickable="true"
-                    />
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/next"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_shape"
+                        android:text="@string/next"
+                        android:layout_marginBottom="8dp"
+                        />
+                    <TextView
+                        android:id="@+id/skip"
+                        android:layout_below="@+id/next"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/skip"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="32dp"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/cairo"
+                        android:textColor="@color/black"
+                        android:clickable="true"
+                        />
+
+                </RelativeLayout>
 
             </LinearLayout>
 
