--- a/app/src/main/res/layout/rv_quiz.xml
+++ b/app/src/main/res/layout/rv_quiz.xml
@@ -9,23 +9,44 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:elevation="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/background_quiz_custom"
+        android:elevation="10dp"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txt_nameQuiz"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="20dp"
-            android:text="@string/quiz"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_small"
-            android:textStyle="bold"
+            android:orientation="vertical"
+            android:layout_marginTop="8dp"
+            android:layout_centerVertical="true">
+            <TextView
+                android:id="@+id/txt_nameQuiz"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="@string/quiz"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_small"
+                android:textStyle="bold"
 
-            />
+                />
+            <TextView
+                android:id="@+id/txt_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textColor="@color/yellow"
+                android:textSize="@dimen/text_size_small"
+                android:textStyle="bold"
+                android:visibility="gone"
+                />
+
+
+        </LinearLayout>
+
 
         <ImageButton
             android:id="@+id/btn_goQuiz"
