--- a/app/src/main/res/layout/sent_answer.xml
+++ b/app/src/main/res/layout/sent_answer.xml
@@ -10,7 +10,6 @@
     <com.google.android.material.circularreveal.CircularRevealLinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:background="@drawable/dialog_custom"
         android:orientation="vertical"
         tools:ignore="MissingDefaultResource">
@@ -26,38 +25,41 @@
                 android:layout_marginTop="24dp"
                 android:src="@drawable/sucsessfully" />
 
-            <ImageButton
-                android:id="@+id/btn_close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="@dimen/mar_rig_lift"
-                android:layout_marginTop="@dimen/mar_rig_lift"
-                android:layout_marginEnd="@dimen/mar_rig_lift"
-                android:layout_marginBottom="@dimen/mar_rig_lift"
-                android:background="@android:color/transparent"
-                android:src="@drawable/user_remove" />
 
         </RelativeLayout>
+
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/changed_pass"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
+            android:text="@string/successfully_sent"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_size_small"/>
+            android:textSize="@dimen/text_size_small" />
+
+        <TextView
+            android:id="@+id/txt_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:text="20 - 30"
+            android:textColor="@color/yellow"
+            android:textSize="@dimen/text_size_small"
+            android:textStyle="bold" />
+
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_home"
+            android:id="@+id/btn_quizAnswer"
             android:layout_width="match_parent"
             android:layout_height="@dimen/btn_size"
             android:layout_marginLeft="@dimen/mar_rig_lift"
             android:layout_marginTop="@dimen/margin_top"
             android:layout_marginRight="@dimen/mar_rig_lift"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/btn_background_login_custom"
             android:fontFamily="@font/cairo"
-            android:layout_marginBottom="20dp"
-            android:text="@string/home"
+            android:text="@string/quiz_answer"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
