--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,13 @@
            android:textSize="@dimen/text_size_small"
            android:text="Home"/>
        <ImageButton
+           android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:src="@drawable/notifications_icon"
+           android:src="@drawable/notifications_icon2"
            android:layout_alignParentEnd="true"
-           android:layout_marginEnd="24dp"
+           android:layout_marginEnd="12dp"
+           android:padding="12dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"/>
 
