--- a/app/src/main/res/layout/activity_quiz_answer.xml
+++ b/app/src/main/res/layout/activity_quiz_answer.xml
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/back_24"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="10dp"
+            android:padding="12dp"
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"/>
     </RelativeLayout>
