--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/mar_rig_lift"
+        android:layout_marginStart="10dp"
+        android:padding="12dp"
         android:layout_marginTop="@dimen/margin_top"
         android:background="@android:color/transparent"
         android:src="@drawable/back_24" />
