--- a/app/src/main/res/layout/rv_solve_quiz.xml
+++ b/app/src/main/res/layout/rv_solve_quiz.xml
@@ -73,7 +73,7 @@
                 android:drawableStart="@drawable/check_true"
                 android:text="Correct Answer"
                 android:textColor="#038E5C"
-                android:visibility=""
+                android:visibility="gone"
                 />
         </LinearLayout>
 
