--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#AEB0B2</color>
     <color name="yellow">#DB6521</color>
     <color name="blue">#0097A0</color>
     <color name="white">#FFFFFFFF</color>
