--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -6,13 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".Contact_Activity">
 
+    <RelativeLayout
+        android:id="@+id/l_bar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:elevation="40dp"
+        android:background="@color/white"
+        >
+        <TextView
+            android:id="@+id/txt_namePage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_centerVertical="true"
+            android:textColor="@color/black"
+            android:layout_centerHorizontal="true"
+            android:textSize="@dimen/text_size_small"
+            android:text="@string/contact"/>
+        <ImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back_24"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="24dp"
+            android:layout_centerVertical="true"
+            android:background="@android:color/transparent"/>
+
+    </RelativeLayout>
+
     <ImageView
+        android:layout_below="@id/l_bar"
         android:id="@+id/alsafty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="@drawable/alsafty_logo"
-        android:layout_marginTop="60dp">
+        android:layout_marginTop="58dp">
 
     </ImageView>
     <LinearLayout
