--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -6,7 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".Terms_Activity">
 
+    <RelativeLayout
+        android:id="@+id/l_bar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:elevation="40dp"
+        android:background="@color/white"
+        >
+        <TextView
+            android:id="@+id/txt_namePage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_centerVertical="true"
+            android:textColor="@color/black"
+            android:layout_centerHorizontal="true"
+            android:textSize="@dimen/text_size_small"
+            android:text="@string/terms"/>
+        <ImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back_24"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="24dp"
+            android:layout_centerVertical="true"
+            android:background="@android:color/transparent"/>
+
+    </RelativeLayout>
+
     <TextView
+        android:layout_below="@id/l_bar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginTop="24dp"
